--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -278,7 +278,7 @@ hr {
         font-weight: 600;
         color: black;
         text-transform: uppercase;
-        cursor: pointer;
+        cursor: default;
         transition: all 0.2s ease-in-out;
         flex: 25%;
         max-width: 25%;
